--- a/volunteam/package.json
+++ b/volunteam/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
