--- a/volunteam/package.json
+++ b/volunteam/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
+    "nodemailer": "^6.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
