--- a/volunteam/package.json
+++ b/volunteam/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "cd client && npm install"
   },
   "eslintConfig": {
     "extends": "react-app"
