--- a/volunteam/package.json
+++ b/volunteam/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "nodemailer": "^6.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
