--- a/volunteam/package.json
+++ b/volunteam/package.json
@@ -13,6 +13,7 @@
     "nodemailer": "^6.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
