--- a/volunteam/package.json
+++ b/volunteam/package.json
@@ -15,6 +15,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
