--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "http-proxy-middleware": "^0.20.0",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "nodemailer": "^6.4.2",
