post /login route now working

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -14,7 +16,7 @@
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
-    "morgan": "~1.9.1",
+    "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
