--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
@@ -17,6 +19,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
