--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-google-autocomplete": "^1.1.2",
+    "react-places-autocomplete": "^7.2.1"
   }
 }
