integrated google maps iframe on viewevent page

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react-awesome-modal": "^2.0.5",
     "react-google-autocomplete": "^1.1.2",
     "react-places-autocomplete": "^7.2.1"
   }
